--- a/pages/gallery/index.pug
+++ b/pages/gallery/index.pug
@@ -1,16 +1,13 @@
-doctype html
-html
-  include /templates/partials/head.pug
-  body
-    #fb-root
-    .container
-      include /templates/partials/header.pug
-      .row
-        h2 Gallery
-        ul
-          li
-            a(href='/gallery/concept-art.html')
-              h3 Concept Art
-              img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png')
+extends /templates/layout.pug
 
-  include /templates/partials/scripts.pug
+block append title
+  | Gallery | Langenium
+
+block append page
+  .row
+    h2 Gallery
+      ul
+        li
+          a(href='/gallery/concept-art.html')
+            h3 Concept Art
+            img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png')
