Added some new pages. Basic styling so the site is presentable

--- a/pages/gallery/concept-art.pug
+++ b/pages/gallery/concept-art.pug
@@ -6,7 +6,7 @@ block append title
 block append page
   .row
     h2 Concept Art
-    ul
+    ul.gallery
       li
         a(href='/universe/art/production/covers/Langenium - Lux Atlas_Cellocher.png')
           img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_Cellocher.png')
@@ -35,8 +35,8 @@ block append page
         a(href='/universe/art/production/covers/Langenium - Lux Atlas_Lupus.png')
           img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lupus.png')
       li
-        a(href='/universe/art/production/covers/Langenium - Lux Atlas_Lux_Atlantis.png')
-          img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lux_Atlantis.png')
+        a(href='/universe/art/production/covers/Langenium - Lux Atlas_Lux Atlantis.png')
+          img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_Lux Atlantis.png')
       li
         a(href='/universe/art/production/covers/Langenium - Lux Atlas_Mantis.png')
           img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_Mantis.png')
