--- a/pages/gallery/index.pug
+++ b/pages/gallery/index.pug
@@ -6,8 +6,12 @@ block append title
 block append page
   .row
     h2 Gallery
-      ul
+      ul.gallery
         li
           a(href='/gallery/concept-art.html')
             h3 Concept Art
             img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png')
+        li
+          a(href='/gallery/posters.html')
+            h3 Posters
+            img(src='/universe/art/production/posters/thumb_Feature Poster-01.png')
