--- a/pages/wiki/index.pug
+++ b/pages/wiki/index.pug
@@ -11,3 +11,5 @@ block append page
         a(href='/wiki/storylines.html') Storylines
       li
         a(href='/wiki/technology_of_2099.html') Technology of 2099
+      li
+        a(href='/wiki/werp.html') WERP
