--- a/pages/wiki/storylines.pug
+++ b/pages/wiki/storylines.pug
@@ -7,3 +7,4 @@ block append page
   .row
     h2 Storylines
     include:markdown /universe/stories-world-building/Epoch Exordium/Prologue for Epoch Exordium.md
+    include:markdown /universe/stories-world-building/Airship Academy/Story Outline.md
