--- a/styles/styles.styl
+++ b/styles/styles.styl
@@ -27,7 +27,10 @@ reset-list()
   ul
     padding 0
   li
+    display inline-block
     list-style-type none
+    padding 1em 1em 0
+    vertical-align top
 
 stretch-image()
   max-width 100%
@@ -64,8 +67,20 @@ header
   nav
     column(1/2)
     reset-list()
+    ul
+      float right
     li
       display inline-block
+      a
+        color #888
+        font-family 'Franchise'
+        font-size 2em
+        line-height 3em
+        padding .5em 1em
+        text-decoration none
+        &:hover
+          color #FFF
+          text-decoration none
 
   .fb-like
     column(1/2)
@@ -88,6 +103,9 @@ header
     text-align center
 
 .most_popular
+  reset-list()
+
+.gallery
   reset-list()
 
 // Tablet
