--- a/pages/games/index.pug
+++ b/pages/games/index.pug
@@ -6,10 +6,11 @@ block append title
 block append page
   .row
     h2 Games
-    p Langenium is a project that encompasses a game engine and it's own world of games and media. Here are the games currently in development, as well as some demo's.
+    p Langenium is a project that encompasses a game engine and it's own world of games and media. Here are the games currently in development, as well as some demo's.   
+    h3 Langenium Epoch Exordium
+    p A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium element is processed and sent to Earth to be used as an energy source. The space station AI has other plans.
+    p Interactive demos of the game are coming soon!
     ul
       li
-        img(src='/universe/new/exordium-poster-01.png')
-        h3 Langenium Epoch Exordium
-        p A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium element is processed and sent to Earth to be used as an energy source. The space station AI has other plans.
-        p Interactive demos of the game are coming soon!
+        a(href='/games/character_test.html') Character test
+    img(src='/universe/new/exordium-poster-01.png')
