--- a/templates/scripts.pug
+++ b/templates/scripts.pug
@@ -2,6 +2,7 @@ block scripts
   script(src='/vendor/jquery/dist/jquery.min.js')
   script(src='/vendor/threejs/build/three.min.js')
   script(src='/vendor/threejs/examples/js/controls/OrbitControls.js')
+  script(src='/vendor/threejs/examples/js/loaders/ColladaLoader.js')
   script(src='/dist/Mirror.js')
   script(src='/vendor/ocean/water-material.js')
   script(src='/vendor/Live2D-WebGL-SDK/lib/live2d.min.js')
