Added music page

--- a/pages/games/character_test.pug
+++ b/pages/games/character_test.pug
@@ -4,7 +4,7 @@ block append scripts
   script(src='/dist/character_test.js')
 
 block append title
-  | Character Test | Langenium
+  | Character Test | Game Demos | Langenium
 
 block append page
   .row
