--- a/pages/games/index.pug
+++ b/pages/games/index.pug
@@ -13,4 +13,6 @@ block append page
     ul
       li
         a(href='/games/character_test.html') Character test
+      li
+        a(href='/games/character_test.html') Music
     img(src='/universe/new/exordium-poster-01.png')
