--- a/templates/scripts.pug
+++ b/templates/scripts.pug
@@ -1,4 +1,4 @@
-block scripts
+block vendor_scripts
   script(src='/vendor/jquery/dist/jquery.min.js')
   script(src='/vendor/threejs/build/three.min.js')
   script(src='/vendor/threejs/examples/js/controls/OrbitControls.js')
@@ -19,21 +19,22 @@ block scripts
   script(id='logoMetalFragShader', type='x-shader/x-fragment')
     include shaders/logo-metal.frag
   script(src='/dist/logo.js')
-  script
-    | // Facebook Like Button.
-    | (function(d, s, id) {
-    |   var js, fjs = d.getElementsByTagName(s)[0];
-    |   if (d.getElementById(id)) return;
-    |   js = d.createElement(s); js.id = id;
-    |   js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
-    |   fjs.parentNode.insertBefore(js, fjs);
-    | }(document, 'script', 'facebook-jssdk'));
-    | 
-    | // Google Analytics
-    | (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    |   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    |   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    | })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    | 
-    | ga('create', 'UA-37159175-1', 'auto');
-    | ga('send', 'pageview');
+block scripts
+script
+  | // Facebook Like Button.
+  | (function(d, s, id) {
+  |   var js, fjs = d.getElementsByTagName(s)[0];
+  |   if (d.getElementById(id)) return;
+  |   js = d.createElement(s); js.id = id;
+  |   js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+  |   fjs.parentNode.insertBefore(js, fjs);
+  | }(document, 'script', 'facebook-jssdk'));
+  | 
+  | // Google Analytics
+  | (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  |   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  |   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  | })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  | 
+  | ga('create', 'UA-37159175-1', 'auto');
+  | ga('send', 'pageview');
