- Renamed to Sound and Music/FX - Fixed logo sizing issue

--- a/pages/games/character_test.pug
+++ b/pages/games/character_test.pug
@@ -8,4 +8,6 @@ block append title
 
 block append page
   .row
+    h3 Character Test
+    p Epoch Exordium's protagonist is Jack. This is a Live2D and Three.JS integration test to demonstrate the use of multiple Live2D canvases to simulate multiple sides of the 2D character in 3D space.
     .character_test
