--- a/pages/games/index.pug
+++ b/pages/games/index.pug
@@ -14,5 +14,5 @@ block append page
       li
         a(href='/games/character_test.html') Character test
       li
-        a(href='/games/character_test.html') Music
+        a(href='/games/sound.html') Sound (Music + SFX)
     img(src='/universe/new/exordium-poster-01.png')
