--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title
       block title
+    link(href='/vendor/Semantic-UI/dist/semantic.min.css', rel='stylesheet')
     link(href='/dist/styles.css', rel='stylesheet')
   body
     #fb-root
