--- a/templates/scripts.pug
+++ b/templates/scripts.pug
@@ -1,5 +1,6 @@
 block vendor_scripts
   script(src='/vendor/jquery/dist/jquery.min.js')
+  script(src='/vendor/Semantic-UI/dist/semantic.min.js')
   script(src='/vendor/threejs/build/three.min.js')
   script(src='/vendor/threejs/examples/js/controls/OrbitControls.js')
   script(src='/vendor/threejs/examples/js/loaders/ColladaLoader.js')
