- Adding configuration to support GPGPU demo from Three.JS site - Added MMO entry to Games page

--- a/pages/games/index.pug
+++ b/pages/games/index.pug
@@ -8,11 +8,19 @@ block append page
     h2 Games
     p Langenium is a project that encompasses a game engine and it's own world of games and media. Here are the games currently in development, as well as some demo's.   
     h3 Langenium Epoch Exordium
-    p A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium element is processed and sent to Earth to be used as an energy source. The space station AI has other plans.
-    p Interactive demos of the game are coming soon!
+    p A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium mineral is processed and sent to Earth to be used as an energy source. The space station AI has other plans.
     ul
       li
         a(href='/games/character_test.html') Character test
       li
         a(href='/games/sound.html') Sound (Music + SFX)
-    img(src='/universe/new/exordium-poster-01.png')
+    img(src='/universe/new/thumb_exordium-poster-01.png')
+    h3 Langenium MMO
+    p The featured game driving the rest of the project. Langenium was originally envisaged as an online airship combat game with RPG exploration elements, but developing it creatively and technically over the years led to concessions in what I can reasonably build within my lifetime so the other games and experiences are being developed in order to create the necessary assets and codebase for the MMO.
+    h4 Premise
+    p The Earth is destroyed in the year 2099 by a solar flare. A wormhole in the sky allows some of humanity to survive on a new planet covered in Ocean. The new planet makes up for its lack of land by being rich in the mineral Langenium, named after the German scientist Dr. Bruno Lange who was a pioneer in making solar energy viable. The mineral is produced in the oceans of the new planet and can be used to collect and store solar energy. 
+    p 200 years later, in the year 2299, the human race is thriving on the new world but conflicts have escalated to the point of war. The tensions between the three factions of Los Zaar, The Union and the Kingdom of Winthrom are causing minor conflicts across the world. Meanwhile, mysterious alien ships are beginning to scout the planet and the humans seem to preoccupied to notice the bigger universe around their new world.
+    ul
+      li
+        a(href='/games/ocean_scene.html') Ocean scene
+    img(src='/universe/art/production/posters/thumb_MMO Poster-01.png')
