--- a/pages/games/ocean_scene.pug
+++ b/pages/games/ocean_scene.pug
@@ -10,4 +10,8 @@ block append page
   .row
     h3 Ocean Scene
     p The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.
+    span#waterSize
+    p webgl gpgpu water
+    span#options 
+    p Water size
     .ocean_scene
