--- a/templates/scripts.pug
+++ b/templates/scripts.pug
@@ -4,6 +4,7 @@ block vendor_scripts
   script(src='/vendor/Semantic-UI/dist/semantic.min.js')
   script(src='/vendor/threejs/examples/js/libs/dat.gui.min.js')
   script(src='/vendor/threejs/build/three.min.js')
+  script(src='/vendor/threejs/examples/js/libs/stats.min.js')
   script(src='/vendor/threejs/examples/js/controls/OrbitControls.js')
   script(src='/vendor/threejs/examples/js/loaders/ColladaLoader.js')
   script(src='/vendor/threejs/examples/js/SimplexNoise.js')
