Got GPGPU water example working.. touch position is mostly accurate?

--- a/templates/scripts.pug
+++ b/templates/scripts.pug
@@ -27,9 +27,9 @@ block vendor_scripts
   script(id='heightmapFragmentShader', type='x-shader/x-fragment')
     include shaders/heightmap.frag
   script(id='smoothFragmentShader', type='x-shader/x-fragment')
-    include shaders/heightmap.frag
+    include shaders/smooth.frag
   script(id='waterVertexShader', type='x-shader/x-vertex')
-    include shaders/heightmap.frag
+    include shaders/water.vert
   script(src='/dist/logo.js')
 block scripts
 script
