--- a/pages/games/ocean_scene.pug
+++ b/pages/games/ocean_scene.pug
@@ -10,6 +10,7 @@ block append page
   .row
     h3 Ocean Scene
     p The planet Ibidan is covered entirely in ocean, with a few scattered islands and geographical features.
+    p TODO: Reflections
     span#waterSize
     p webgl gpgpu water
     span#options 
