--- a/pages/wiki/index.pug
+++ b/pages/wiki/index.pug
@@ -8,8 +8,29 @@ block append page
     h2 Welcome to the Langenium Wiki
     ul
       li
-        a(href='/wiki/storylines.html') Storylines
+        h3 Games (in order of development)
+        ul
+          li
+            a(href='/wiki/games--epoch-exordium.html') Epoch Exordium
+          li
+            a(href='/wiki/games--airship-academy.html') Airship Academy
+          li
+            a(href='/wiki/games--mmo.html') MMO
+          li
+            a(href='/wiki/games--fall-of-the-elx.html') Fall of the Elx
+      li
+        h3 Storylines
+        ul
+          li
+            h3 Characters
+            ul
+              li
+                a(href='/wiki/characters--werp.html') WERP
+          li
+            a(href='/wiki/storylines--2077.html') 2077
+          li
+            a(href='/wiki/storylines--2099.html') 2099
+          li
+            a(href='/wiki/storylines--2299.html') 2299
       li
         a(href='/wiki/technology_of_2099.html') Technology of 2099
-      li
-        a(href='/wiki/werp.html') WERP
