Removing logo.js for now, effect is fugly with new UV mappings :'( Added new wiki page

--- a/pages/wiki/index.pug
+++ b/pages/wiki/index.pug
@@ -11,13 +11,18 @@ block append page
         h3 Games (in order of development)
         ul
           li
-            a(href='/wiki/games--epoch-exordium.html') Epoch Exordium
+            a(href='/wiki/epoch-exordium.html') Epoch Exordium
           li
-            a(href='/wiki/games--airship-academy.html') Airship Academy
+            a(href='/wiki/airship-academy.html') Airship Academy
           li
-            a(href='/wiki/games--mmo.html') MMO
+            a(href='/wiki/mmo.html') MMO
           li
-            a(href='/wiki/games--fall-of-the-elx.html') Fall of the Elx
+            a(href='/wiki/fall-of-the-elx.html') Fall of the Elx
+      li
+        h3 Lore, locations and mythology
+        ul
+          li
+            a(href='/wiki/langenium.html') Langenium (mineral)
       li
         h3 Storylines
         ul
@@ -25,12 +30,13 @@ block append page
             h3 Characters
             ul
               li
-                a(href='/wiki/characters--werp.html') WERP
+                a(href='/wiki/werp.html') WERP
           li
-            a(href='/wiki/storylines--2077.html') 2077
+            a(href='/wiki/2077.html') 2077
           li
-            a(href='/wiki/storylines--2099.html') 2099
+            a(href='/wiki/2099.html') 2099
+            ul
+              li
+                a(href='/wiki/technology_of_2099.html') Technology of 2099
           li
-            a(href='/wiki/storylines--2299.html') 2299
-      li
-        a(href='/wiki/technology_of_2099.html') Technology of 2099
+            a(href='/wiki/2299.html') 2299
