--- a/pages/wiki/storylines.pug
+++ b/pages/wiki/storylines.pug
@@ -6,5 +6,7 @@ block append title
 block append page
   .row
     h2 Storylines
+    h3 Epoch Exordium
     include:markdown /universe/stories-world-building/Epoch Exordium/Prologue for Epoch Exordium.md
+    h3 Airship Academy
     include:markdown /universe/stories-world-building/Airship Academy/Story Outline.md
