--- a/templates/scripts.pug
+++ b/templates/scripts.pug
@@ -31,7 +31,7 @@ block vendor_scripts
   script(id='waterVertexShader', type='x-shader/x-vertex')
     include shaders/water.vert
   script(src='/dist/L.js')
-  script(src='/dist/logo.js')
+  // script(src='/dist/logo.js')
 block scripts
 script
   | // Facebook Like Button.
