Adding wiki pages

--- a/pages/wiki/index.pug
+++ b/pages/wiki/index.pug
@@ -27,16 +27,101 @@ block append page
         h3 Storylines
         ul
           li
-            h3 Characters
+            h3 Sentient races
+            p There are two categories for life - Astral and Cosmic. Astral life forms are biological and generally require a breathable atmosphere and other conditions to survive. Cosmic life forms inhabit either the vastness of space or a realm beyond normal space time.
+            h4 Cosmic
             ul
+              li
+                a(href='/wiki/cellocher.html') Cellocher
+              li
+                a(href='/wiki/drak.html') Drak
+              li
+                a(href='/wiki/maya.html') Maya
+              li
+                a(href='/wiki/robot.html') Robot
+              li
+                a(href='/wiki/sinnis.html') Sinnis
               li
                 a(href='/wiki/werp.html') WERP
-          li
-            a(href='/wiki/2077.html') 2077
-          li
-            a(href='/wiki/2099.html') 2099
+              li
+                a(href='/wiki/yed.html') Yed       
+            h4 Astral
             ul
               li
-                a(href='/wiki/technology_of_2099.html') Technology of 2099
+                a(href='/wiki/elx.html') Elx
+              li
+                a(href='/wiki/ganetti.html') Ganetti
+              li
+                a(href='/wiki/hircus-human.html') Hircus (Human)
+              li
+                a(href='/wiki/krahm.html') Krahm
+              li
+                a(href='/wiki/lupus.html') Lupus
+              li
+                a(href='/wiki/mantis.html') Mantis
+              li
+                a(href='/wiki/mon-kis.html') Mon-kis
+              li
+                a(href='/wiki/tigris.html') Tigris
+              li
+                a(href='/wiki/torton.html') Torton
           li
-            a(href='/wiki/2299.html') 2299
+            h3 Planned Arcs
+            p The arcs below are broken up into different dimensional realities that are connected to the ones in the games, essentially serving as origin stories and world building sources for background details.
+            p The first three won't be covered by any games and are purely mythological, however some characters will appear in the games are deities and ancient aliens etc.
+            ul
+              li
+                a(href='/wiki/end-of-love.html') End of Love
+                p The story of the beginning of time
+              li
+                a(href='/wiki/tree-of-life.html') Tree of Life
+                p The restoration of life to the universe
+              li
+                a(href='/wiki/atlantis-v-olympus.html') Atlantis vs Olympus
+                p The restraint of evil and triumph of good
+              li
+                a(href='/wiki/lux-atlas.html') Lux Atlas
+                p The creation of the infinite universe
+              li
+                a(href='/wiki/phoenix-day.html') Phoenix Day
+                p The destruction of Earth and migration to Ibidan
+              li
+                a(href='/wiki/his-story.html') His Story
+                p The endgame of the entire narrative, the story of the Horned God and his pantheon of avatars across time and space.  
+          li
+            h3 Significant Periods in History
+            p The historical timeline of Langenium is told from the perspective of the human race from Earth and so while there are some notes on stories for various species, I plan to back everything against the standard calendar we follow.
+            ul
+              li
+                a(href='/wiki/2077.html') 2077
+                ul
+                  li
+                    a(href='/wiki/2077.html#events') Events
+                  li
+                    a(href='/wiki/2077.html#locations') Locations
+                  li
+                    a(href='/wiki/2077.html#people') People
+                  li
+                    a(href='/wiki/2077.html#technology') Technology
+              li
+                a(href='/wiki/2099.html') 2099
+                ul
+                  li
+                    a(href='/wiki/2099.html#events') Events
+                  li
+                    a(href='/wiki/2099.html#locations') Locations
+                  li
+                    a(href='/wiki/2099.html#people') People
+                  li
+                    a(href='/wiki/2099.html#technology') Technology
+              li
+                a(href='/wiki/2299.html') 2299
+                ul
+                  li
+                    a(href='/wiki/2299.html#events') Events
+                  li
+                    a(href='/wiki/2299.html#locations') Locations
+                  li
+                    a(href='/wiki/2299.html#people') People
+                  li
+                    a(href='/wiki/2299.html#technology') Technology
