Added all the race pages

--- a/pages/wiki/index.pug
+++ b/pages/wiki/index.pug
@@ -36,15 +36,15 @@ block append page
               li
                 a(href='/wiki/drak.html') Drak
               li
+                a(href='/wiki/host.html') Host
+              li
                 a(href='/wiki/maya.html') Maya
               li
                 a(href='/wiki/robot.html') Robot
               li
                 a(href='/wiki/sinnis.html') Sinnis
               li
-                a(href='/wiki/werp.html') WERP
-              li
-                a(href='/wiki/yed.html') Yed       
+                a(href='/wiki/werp.html') WERP  
             h4 Astral
             ul
               li
