--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -5,9 +5,11 @@ html
       block title
     link(href='/vendor/Semantic-UI/dist/semantic.min.css', rel='stylesheet')
     link(href='/dist/styles.css', rel='stylesheet')
+    link(href='/dist/content.css', rel='stylesheet')
   body
     #fb-root
     .container
       include /templates/header.pug
-      block page
+      #content
+        block page
   include /templates/scripts.pug
