--- a/templates/scripts.pug
+++ b/templates/scripts.pug
@@ -10,6 +10,7 @@ block vendor_scripts
   script(src='/vendor/threejs/examples/js/SimplexNoise.js')
   script(src='/vendor/threejs/examples/js/GPUComputationRenderer.js')
   script(src='/vendor/threejs/examples/js/Mirror.js')
+  script(src='/vendor/threejs/examples/js/WaterShader.js')
   script(src='/vendor/ocean/water-material.js')
   script(src='/vendor/Live2D-WebGL-SDK/lib/live2d.min.js')
   script(src='/vendor/Live2D-WebGL-SDK/framework/Live2DFramework.js')
