Prettied up gallery

--- a/content/gallery/posters.pug
+++ b/content/gallery/posters.pug
@@ -6,28 +6,28 @@ block append title
 block append page
   .row
     h2 Posters
-    ul.gallery
-      li
-        a(href='/universe/art/production/posters/Atlantis - Yedin\'s Temple-01.png')
+    .ui.four.stackable.cards
+      .ui.card
+        a.image(href='/universe/art/production/posters/Atlantis - Yedin\'s Temple-01.png')
           img(src='/universe/art/production/posters/thumb_Atlantis - Yedin\'s Temple-01.png')
-      li
-        a(href='/universe/art/production/posters/Exordium Redesign-01.png')
+      .ui.card
+        a.image(href='/universe/art/production/posters/Exordium Redesign-01.png')
           img(src='/universe/art/production/posters/thumb_Exordium Redesign-01.png')
-      li
-        a(href='/universe/art/production/posters/Feature Poster-01.png')
+      .ui.card
+        a.image(href='/universe/art/production/posters/Feature Poster-01.png')
           img(src='/universe/art/production/posters/thumb_Feature Poster-01.png')
-      li
-        a(href='/universe/art/production/posters/Langenium - Cosmic Archetypes-01.png')
+      .ui.card
+        a.image(href='/universe/art/production/posters/Langenium - Cosmic Archetypes-01.png')
           img(src='/universe/art/production/posters/thumb_Langenium - Cosmic Archetypes-01.png')
-      li
-        a(href='/universe/art/production/posters/Langenium Airship Academy-01.png')
+      .ui.card
+        a.image(href='/universe/art/production/posters/Langenium Airship Academy-01.png')
           img(src='/universe/art/production/posters/thumb_Langenium Airship Academy-01.png')
-      li
-        a(href='/universe/art/production/posters/Langenium Fall of the Elx-01.png')
+      .ui.card
+        a.image(href='/universe/art/production/posters/Langenium Fall of the Elx-01.png')
           img(src='/universe/art/production/posters/thumb_Langenium Fall of the Elx-01.png')
-      li
-        a(href='/universe/art/production/posters/Langenium Master Timeline-01.png')
+      .ui.card
+        a.image(href='/universe/art/production/posters/Langenium Master Timeline-01.png')
           img(src='/universe/art/production/posters/thumb_Langenium Master Timeline-01.png')
-      li
-        a(href='/universe/art/production/posters/MMO Poster-01.png')
+      .ui.card
+        a.image(href='/universe/art/production/posters/MMO Poster-01.png')
           img(src='/universe/art/production/posters/thumb_MMO Poster-01.png')
