--- a/content/gallery/index.pug
+++ b/content/gallery/index.pug
@@ -6,12 +6,15 @@ block append title
 block append page
   .row
     h2 Gallery
-      ul.gallery
-        li
-          a(href='/gallery/concept-art.html')
-            h3 Concept Art
+      .ui.stackable.cards
+        .ui.card.teal
+          a.image(href='/gallery/concept-art.html')
             img(src='/universe/art/production/covers/thumb_Langenium - Lux Atlas_World Eater.png')
-        li
-          a(href='/gallery/posters.html')
-            h3 Posters
+          .content
+            a.header(href='/gallery/concept-art.html') Concept Art
+        .ui.card.yellow
+          a.image(href='/gallery/posters.html')
             img(src='/universe/art/production/posters/thumb_Feature Poster-01.png')
+          .content
+            a.header(href='/gallery/concept-art.html') Posters
+            
