Cleaned up Lux Mundi Atlas page. Going to turn Wiki homepage into card layout using Semantic

--- a/content/wiki/index.pug
+++ b/content/wiki/index.pug
@@ -80,8 +80,8 @@ block append page
                 a(href='/wiki/atlantis-v-olympus.html') Atlantis vs Olympus
                 p The restraint of evil and triumph of good
               li
-                a(href='/wiki/lux-atlas.html') Lux Atlas
-                p The creation of the infinite universe
+                a(href='/wiki/lux-mundi-atlas.html') Lux Mundi Atlas
+                p The emergence into the infinite universe
               li
                 a(href='/wiki/phoenix-day.html') Phoenix Day
                 p The destruction of Earth and migration to Ibidan
