--- a/styles/content.styl
+++ b/styles/content.styl
@@ -15,3 +15,10 @@ reset-list()
 		padding .5em
 		background-color #333
 		width 100%
+  
+#content
+  img
+    max-width 100%
+    max-height 100%
+    width 100%
+    height 100%  
