Added images to race pages

--- a/content/wiki/maya.pug
+++ b/content/wiki/maya.pug
@@ -6,3 +6,4 @@ block append title
 block append page
   .row
     include:markdown /universe/stories-world-building/Races/Maya.md
+    img(src='/universe/art/production/covers/Langenium - Lux Atlas_Maya.png')
