--- a/content/wiki/torton.pug
+++ b/content/wiki/torton.pug
@@ -6,3 +6,4 @@ block append title
 block append page
   .row
     include:markdown /universe/stories-world-building/Races/Torton.md
+    img(src='/universe/art/production/covers/Langenium - Lux Atlas_Torton.png')
