--- a/content/wiki/ganetti.pug
+++ b/content/wiki/ganetti.pug
@@ -6,3 +6,4 @@ block append title
 block append page
   .row
     include:markdown /universe/stories-world-building/Races/Ganetti.md
+    img(src='/universe/art/production/covers/Langenium - Lux Atlas_Ganetti.png')
