--- a/content/wiki/lupus.pug
+++ b/content/wiki/lupus.pug
@@ -6,3 +6,4 @@ block append title
 block append page
   .row
     include:markdown /universe/stories-world-building/Races/Lupus.md
+    img(src='/universe/art/production/covers/Langenium - Lux Atlas_Lupus.png')
