--- a/content/wiki/robot.pug
+++ b/content/wiki/robot.pug
@@ -6,3 +6,4 @@ block append title
 block append page
   .row
     include:markdown /universe/stories-world-building/Races/Robot.md
+    img(src='/universe/art/production/covers/Langenium - Lux Atlas_Robot.png')
