--- a/content/wiki/tigris.pug
+++ b/content/wiki/tigris.pug
@@ -6,3 +6,4 @@ block append title
 block append page
   .row
     include:markdown /universe/stories-world-building/Races/Tigris.md
+    img(src='/universe/art/production/covers/Langenium - Lux Atlas_Tigris.png')
