Added ability to move logo..

--- a/templates/header.pug
+++ b/templates/header.pug
@@ -1,8 +1,10 @@
 header.row
-  a.logo(href='/', title='Langenium')
+  .logo
     img(src='/logo.png')
   nav
     ul
+      li
+        a(href='/') Home
       li
         a(href='/about.html') About
       li
