--- a/old/src/core.css
+++ b/old/src/core.css
@@ -11,8 +11,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   font-family: 'Franchise';
   font-style: normal;
   font-weight: normal;
-  src: url("/res/fonts/francise.eot");
-  src: url("/res/fonts/franchise.eot?#iefix") format('embedded-opentype'), url("/res/fonts/franchise.woff") format('woff'), url("/res/font/franchise.ttf") format('truetype'), url("/assets/fonts/franchise.svg#franchiseregular") format('svg');
+  src: url("./res/fonts/francise.eot");
+  src: url("./res/fonts/franchise.eot?#iefix") format('embedded-opentype'), url("./res/fonts/franchise.woff") format('woff'), url("./res/font/franchise.ttf") format('truetype'), url("/assets/fonts/franchise.svg#franchiseregular") format('svg');
 }
 
 html {
