Removing unused pages, hooking up keyboard controls

--- a/client/src/web/404.pug
+++ b/client/src/web/404.pug
@@ -2,7 +2,7 @@
 permalink: "404.html"
 dynamicPermalink: false
 eleventyExcludeFromCollections: true
-title: Page not found | Open Studios | Perth, Western Australia
+title: Page not found | Langenium
 ---
 
 extends ../templates/1999_html.pug
