--- a/client/src/web/index.pug
+++ b/client/src/web/index.pug
@@ -1,8 +1,8 @@
 ---
 permalink: "index.html"
 dynamicPermalink: false
-title: Open Studios | Perth, Western Australia
-description: Greetings! Welcome to Open Studios, your go-to destination for cutting-edge digital creative and technical production. Nestled in the vibrant city of Perth, Australia, we pride ourselves on being a specialized digital production studio that stands out from the crowd.
+title: Langenium v6 Test Scene
+description: Welcome to the Langenium v6 demo
 date: 2023-10-18T16:58:16.267Z
 priority: "1.0"
 changefreq: daily
